<resources>
    <string name="app_name">tcc-after</string>
    <string name="title_home">Home</string>
    <string name="titleMoments">Moments</string>
    <string name="titleSearch">Pesquisa</string>
    <string name="titlePerfil">Perfil</string>
    <string name="titleTikets">Ingressos</string>
    <string name="clickHerePandemic"><a href="https://www.gov.br/saude/pt-br/coronavirus">clique aqui</a></string>
    <string name="titleNotifications">Notificações</string>
    <string name="titleSettings">Configurações</string>
    <string-array name="settingsArray">
        <item>Editar</item>
        <item>Verificar</item>
        <item>Sair</item>
    </string-array>
    <string name="next">Próximo</string>
    <string name="previous">Voltar</string>
    <string name="advance">Avançar</string>
    <string name="finish">Concluir</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="buy">Comprar</string>
    <string name="enter">Entrar</string>
    <string name="acept">Aceitar</string>
    <string name="denied">Rejeitar</string>
    <string name="confirm">Confirmar</string>
    <string name="leave">Sair</string>
    <string name="send">Enviar</string>
    <string name="validate">Validar</string>
    <string name="requestVerification">Solicitar verificação</string>
    <string name="welcome">Bem vindo(a)!</string>
    <string name="tickets">Ingressos</string>
    <string name="askVerification">Pedir verificação</string>
    <string name="verification">Verificação</string>
    <string name="login">Login</string>
    <string name="register">Cadastrar</string>
    <string name="moments">Moments</string>
    <string name="leaveAccount">Deseja sair da sua conta?</string>
    <string name="verificationSolicitation">Solicitações de verificação</string>
    <string name="paidTicket">Ingresso pago</string>
    <string name="freeTicket">Ingresso gratuito</string>
    <string name="createEvent">Criar evento</string>
    <string name="allotment">Lote</string>
    <string name="company">Empresa</string>
    <string name="user">Usuário</string>
    <string name="ativos">Ativos</string>
    <string name="utilizados">Utilizados</string>
    <string name="checkIt"> Se liga!</string>
    <string name="nearYou">Perto de você</string>
    <string name="suggestions">Outras sugestões</string>
    <string name="whoeVerification">Quem pode pedir verificação?</string>
    <string name="whyVerification">Por que pedir verificação?</string>
    <string name="whichVerification">Quais são os benefícios?</string>
    <string name="requisitVerification">Quais são os requisitos para verificação?</string>
    <string name="confirmAuthenticity">Confirmar autenticidade</string>
    <string name="activeTickets">Ativos</string>
    <string name="usedTickets">Utilizados</string>
    <string name="aboutSell">Sobre as vendas</string>
    <string name="qtdBuy">Quantidade permitida por compra</string>
    <string name="ticketArea">Área de ingressos</string>
    <string name="newAllotment">Novo lote</string>
    <string name="nickname">Nickname</string>
    <string name="carrier">Portador:</string>
    <string name="cpf">CPF:</string>
    <string name="name">Nome completo</string>
    <string name="bornDate">Data de nascimento</string>
    <string name="cep">CEP</string>
    <string name="password">Senha</string>
    <string name="confPassword">Confirme sua senha</string>
    <string name="cnpj">CNPJ</string>
    <string name="email">Email</string>
    <string name="confEmail">Confirmar email</string>
    <string name="state">Estado</string>
    <string name="city">Cidade</string>
    <string name="neighborhood">Bairro</string>
    <string name="street">Logradouro</string>
    <string name="number">Número</string>
    <string name="complement">Complemento</string>
    <string name="subject">Assunto</string>
    <string name="category">Categoria</string>
    <string name="eventType">Tipo de evento</string>
    <string name="localization">Localização</string>
    <string name="date">Data</string>
    <string name="time">Hora</string>
    <string name="search">Pesquisar</string>
    <string name="eventTitle">Título</string>
    <string name="dateTime">Data e hora</string>
    <string name="ageGroup">Faixa etária</string>
    <string name="NumberCode">Número do Pedido:</string>
    <string name="ShopDate">Data de Compra:</string>
    <string name="reasonVerificationAdm">Motivo para a verificação</string>
    <string name="identity">Identidade</string>
    <string name="attachImage">Anexe uma imagem sua segurando um documento com foto</string>
    <string name="chooseFile">Escolher arquivo</string>
    <string name="reasonVerificationUser">Digite o motivo para a verificação</string>
    <string name="photoPerfil">Selecione uma foto para o seu perfil</string>
    <string name="backPhoto">Adicione também uma foto de fundo</string>
    <string name="addBio">Adicione uma biografia ou uma mensagem para as outras pessoas verem</string>
    <string name="addPerfilPhoto">Adicionar foto de perfil</string>
    <string name="addBackPhoto">Adicionar foto de capa</string>
    <string name="addExtraPhotos">Adicionar fotos extras</string>
    <string name="star">Celebridade</string>
    <string name="ticketTitle">Título do ingresso</string>
    <string name="price">Preço</string>
    <string name="description">Descrição</string>
    <string name="quantity">Quantidade</string>
    <string name="createHalfTicket">Criar meia entrada para esse ingresso</string>
    <string name="start">Inicio</string>
    <string name="end">Fim</string>
    <string name="seeImage">Ver imagem</string>
    <string name="publishBy">Publicado por:</string>
    <string name="agreeTerms">Li e concordo com os termos</string>
    <string name="clickHere">clique aqui!</string>
    <string name="knowMore">Para saber mais!</string>
    <string name="seeSolicitation">Ver solicitação</string>
    <string name="forgotPassword">Esqueci minha senha</string>
    <string name="dontHaveAccount">Não tem uma conta?</string>
    <string name="registerNow">Cadastre-se agora!</string>
    <string name="registerHow">Cadastrar como</string>
    <string name="bankAccount">Conta bancária</string>
    <string name="bank">Banco</string>
    <string name="agency">Agência</string>
    <string name="accountBankAccount">Conta</string>
    <string name="digit">Dígito</string>
    <string name="typeBankAccount">Tipo de conta</string>
    <string name="bio">Biografia</string>
    <string name="regularBankAccount">Conta padrão</string>
    <string name="haveAccont">Já tem uma conta?</string>
    <string name="conectNow">Conecte-se agora!</string>
    <string name="writeBio">Ecreva aqui sua bio...</string>
    <string name="skipStep">Pular etapa</string>
    <string name="verificationInProgress">Verificação em andamento</string>
    <string name="companyVerificationText">Olá produtor! Você poderá utilizar nossa aplicação a vontade quando a sua verificação for aprovada. Enquanto isso, conheça o aplicativo! ;)</string>
    <string name="obsCompanyVerification">OBS: Você poderá criar eventos, porém não serão publicados</string>
    <string name="whoVerificationDescription">Essa função é focada principalmente para celebridades e organizadores de eventos</string>
    <string name="whyVerificationDescription">Sua principal funcionalidade é certificar que sua conta é oficial e diferenciar ela de outras contas falsas criadas por usuários.</string>
    <string name="whichVerificationDescription">• Você poderá criar Moments\n• Você terá acesso a chats exclusivos com outros usuários verificados\n• Você poderá criar eventos na plataforma.</string>
    <string name="requisitVerificationDescription">• Ter mais de 18 anos\n• Responder ao formulário de verificação</string>
    <string name="pandemicAlert1">Ao frequentar um evento neste período de pandemia, você está ciente e assume os riscos de saúde envolvidos.</string>
    <string name="pandemicAlert2">A adoção dos protocolos de saúde e segurança pelo local e participantes visa mitigar os riscos de exosição e contaminação pelo coronavírus.</string>
    <string name="pandemicAlert3">Use máscara, mantenha o distanciamento, higienize as mãos com frequência e se informe sobre as normas de segurança vigentes na cidade do evento.</string>
    <string name="responsabilityAlert1">O After não se responsabiliza pelo o que acontecer no evento.  Qualquer acontecimento indesejado, deve ser comunicado a empresa responsável.</string>
    <string name="responsabilityAlert2">Todas e quaisquer documentação para a compravação de meia entrada devem ser levadas para o envento, visando a legitimidade desse ingresso.</string>
    <string name="responsabilityAlert3">O After não se responsabiliza por qualquer alterança do evento, por atraso e pela devolução de valores pagos nos ingressos.</string>
    <string name="changeBackPhoto">Trocar fundo</string>
    <string name="changePhotoPerfil">Trocar foto</string>
    <string name="principalAtraction">Atrações principais</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startDate">Data do início</string>
    <string name="finishDate">Data do término</string>
    <string name="startTime">Hora do início</string>
    <string name="finishTime">Hora do término</string>
    <string name="minimum">Mínimo</string>
    <string name="maximum">Máximo</string>
    <string name="eventEstatistics">Estatísticas dos eventos</string>
    <string name="active">Ativos</string>
    <string name="closed">Encerrados</string>
    <string name="soldTickets">Ingressos vendidos</string>
    <string name="gain">Lucro</string>
    <string name="edit">Editar</string>
</resources>