<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".uiFragments.user.verification.AboutVerificationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/parent">

            <ImageButton
                android:id="@+id/btnAboutVerification_Back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/round_corner"
                android:src="@drawable/ic_baseline_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="40dp" />


            <TextView
                android:id="@+id/tvAboutVerification_Verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/textViewTitles"
                android:text="@string/verification"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAboutVerification_Back" />

            <TextView
                android:id="@+id/tvAboutVerification_Who"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/textViewSubTitles"
                android:text="@string/whoeVerification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAboutVerification_Verification" />

            <TextView
                android:id="@+id/tvAboutVerification_WhoDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/textViewSubName"
                android:text="@string/whoVerificationDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAboutVerification_Who" />

            <TextView
                android:id="@+id/tvAboutVerification_Why"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/textViewSubTitles"
                android:text="@string/whyVerification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAboutVerification_WhoDescription" />

            <TextView
                android:id="@+id/tvAboutVerification_WhyDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/textViewSubName"
                android:text="@string/whyVerificationDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAboutVerification_Why" />

            <TextView
                android:id="@+id/tvAboutVerification_WhatBenefits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/textViewSubTitles"
                android:text="@string/whichVerification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAboutVerification_WhyDescription" />


            <TextView
                android:id="@+id/tvAboutVerification_WhatBenefitsDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/textViewSubName"
                android:text="@string/whichVerificationDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAboutVerification_WhatBenefits" />

            <TextView
                android:id="@+id/tvAboutVerification_Requirements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/textViewSubTitles"
                android:text="@string/requisitVerification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAboutVerification_WhatBenefitsDescription" />


            <TextView
                android:id="@+id/tvAboutVerification_RequirementsDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/textViewSubName"
                android:text="@string/requisitVerificationDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAboutVerification_Requirements" />

            <Button
                android:id="@+id/btnAboutVerification_Request"
                style="@style/buttonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/requestVerification"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAboutVerification_RequirementsDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>