<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".UI.user.UserEditPerfilActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <ImageView
            android:id="@+id/ivUserEditPerfil_Cover"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            style="@style/photoCapa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivUserEditPerfil_Photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/photoPerfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivUserEditPerfil_Cover" />

        <TextView
            android:id="@+id/btnUserEditPerfil_EditPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textViewSubName"
            android:text="@string/changePhotoPerfil"
            app:layout_constraintEnd_toEndOf="@+id/ivUserEditPerfil_Photo"
            app:layout_constraintStart_toStartOf="@+id/ivUserEditPerfil_Photo"
            app:layout_constraintTop_toBottomOf="@+id/ivUserEditPerfil_Photo" />

        <TextView
            android:id="@+id/tvUserEditPerfil_EditWallpaper"
            style="@style/textViewSubName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeBackPhoto"
            app:layout_constraintBottom_toBottomOf="@+id/ivUserEditPerfil_Cover"
            app:layout_constraintEnd_toEndOf="@+id/ivUserEditPerfil_Cover"
            app:layout_constraintStart_toEndOf="@+id/ivUserEditPerfil_Photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnUserEditPerfil_EditPhoto">


            <TextView
                android:id="@+id/tvUserEditPerfil_Nickname"
                style="@style/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nickname" />

            <EditText
                android:id="@+id/etUserEditPerfil_UserNickname"
                style="@style/editTextText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvUserEditPerfil_Description"
                style="@style/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/bio" />

            <EditText
                android:id="@+id/etUserEditPerfil_UserDescription"
                style="@style/editTextText"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <TextView
                android:id="@+id/tvUserEditPerfil_Name"
                style="@style/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/name" />

            <EditText
                android:id="@+id/etUserEditPerfil_UserName"
                style="@style/editTextText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvUserEditPerfil_Email"
                style="@style/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/etUserEditPerfil_UserEmail"
                style="@style/editTextText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvUserEditPerfil_Password"
                style="@style/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password" />


            <EditText
                android:id="@+id/etUserEditPerfil_UserPassword"
                style="@style/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_visibility_off"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUserEditPerfil_Birth"
                        style="@style/textViewName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bornDate" />

                    <EditText
                        android:id="@+id/etUserEditPerfil_UserBirth"
                        style="@style/editTextBigger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUserEditPerfil_Cep"
                        style="@style/textViewName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cep" />

                    <EditText
                        android:id="@+id/etUserEditPerfil_UserCep"
                        style="@style/editTextSmaller"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUserEditPerfil_City"
                        style="@style/textViewName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city" />

                    <EditText
                        android:id="@+id/etUserEditPerfil_UserCity"
                        style="@style/editTextBigger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUserEditPerfil_State"
                        style="@style/textViewName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/state" />

                    <EditText
                        android:id="@+id/etUserEditPerfil_UserState"
                        style="@style/editTextSmaller"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnUserEditPerfil_Cancel"
                    style="@style/buttonCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/btnUserEditPerfil_Save"
                    style="@style/buttonSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/save" />

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>