<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.user.user_register.PhotoUserRegisterActivity"
    android:background="@color/background_primary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">


            <ImageView
                android:id="@+id/ivUserPhotoRegister_Cover"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                style="@style/photoCapa"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivUserPhotoRegister_Perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/photoPerfil"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivUserPhotoRegister_Cover" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/ivUserPhotoRegister_Perfil">

            <TextView
                android:id="@+id/tvUserPhotoRegister_Order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/textViewSubName"
                android:text="@string/photoPerfil"
                 />


            <EditText
                android:id="@+id/etUserPhotoRegister_Description"
                style="@style/editTextText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:hint="@string/writeBio"
                 />

            <Button
                android:id="@+id/btnUserPhotoRegister_Add"
                style="@style/buttonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/finish"
                 />

            <TextView
                android:id="@+id/tvUserPhotoRegister_Skip"
                style="@style/textViewNamePurpleQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/skipStep" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>